@@ -38,17 +38,13 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <legal><![CDATA[[INFO] Any downloads listed may be third party software.  Microsoft grants you no rights for third party software.]]></legal>
-    <jacoco.min.linecoverage>0.60</jacoco.min.linecoverage>
-    <jacoco.min.branchcoverage>0.55</jacoco.min.branchcoverage>
+    <jacoco.min.linecoverage>0.85</jacoco.min.linecoverage>
+    <jacoco.min.branchcoverage>0.75</jacoco.min.branchcoverage>
     <javaModulesSurefireArgLine>
-      --add-exports io.clientcore.core/io.clientcore.core.implementation.http=ALL-UNNAMED
-      --add-exports io.clientcore.core/io.clientcore.core.implementation.http.serializer=ALL-UNNAMED
-      --add-exports io.clientcore.core/io.clientcore.core.implementation.util=ALL-UNNAMED
+      --add-opens io.clientcore.http.netty4/io.clientcore.http.netty4=ALL-UNNAMED
+      --add-opens io.clientcore.http.netty4/io.clientcore.http.netty4.implementation=ALL-UNNAMED
 
-      --add-opens io.clientcore.http.netty/io.clientcore.http.netty=ALL-UNNAMED
-      --add-opens io.clientcore.http.netty/io.clientcore.http.netty4.implementation=ALL-UNNAMED
-
-      --add-reads io.clientcore.http.netty=java.logging
+      --add-reads io.clientcore.http.netty4=java.logging
     </javaModulesSurefireArgLine>
 
     <!-- Enables fail on deprecated API usage. -->
